infrastructure/gitops/apps/platform/nucleus/service-log-processor.yaml
---
# Source: omniverse-nucleus/templates/services/log-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nucleus-log-processor
  labels:
    app: nucleus-log-processor
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nucleus-log-processor
  template:
    metadata:
      labels:
        app: nucleus-log-processor
    spec:
      serviceAccountName: nucleus
      imagePullSecrets:
        - name: ngc-pull-secret
      containers:
        - name: nucleus-log-processor
          image: nvcr.io/nvidia/omniverse/nucleus-log-processor:1.14.53
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: data
              mountPath: /omni/log
              subPath: log
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nucleus-data
