infrastructure/gitops/apps/platform/nucleus/service-thumbnails.yaml
---
# Source: omniverse-nucleus/templates/services/thumbnails.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nucleus-thumbnails
  labels:
    app: nucleus-thumbnails
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nucleus-thumbnails
  template:
    metadata:
      labels:
        app: nucleus-thumbnails
    spec:
      serviceAccountName: nucleus
      imagePullSecrets:
        - name: ngc-pull-secret
      containers:
        - name: nucleus-thumbnails
          image: nvcr.io/nvidia/omniverse/nucleus-thumbnails:1.5.14
          resources:
            limits:
              cpu: "1"
              memory: 4Gi
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /omni/log
              subPath: log/thumbnails
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nucleus-data
