infrastructure/gitops/apps/platform/nucleus/service-api.yaml
---
# Source: omniverse-nucleus/templates/services/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: nucleus-api
  namespace: omniverse-nucleus
  labels:
    app: nucleus-api
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  selector:
    app: nucleus-api
  ports:
    - name: api
      port: 3009
      targetPort: 3009
    - name: api-authenticated
      port: 3106
      targetPort: 3106
    - name: api-admin
      port: 3006
      targetPort: 3006
    - name: api-lft
      port: 3007
      targetPort: 3007
---
# Source: omniverse-nucleus/templates/services/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nucleus-api
  namespace: omniverse-nucleus
  labels:
    app: nucleus-api
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nucleus-api
  template:
    metadata:
      labels:
        app: nucleus-api
    spec:
      serviceAccountName: nucleus
      imagePullSecrets:
        - name: ngc-pull-secret
      containers:
        - name: nucleus-api
          image: nvcr.io/nvidia/omniverse/nucleus-api:1.14.53
          resources:
            limits:
              cpu: "4"
              memory: 8Gi
            requests:
              cpu: 500m
              memory: 1Gi
          ports:
            - containerPort: 3009
            - containerPort: 3106
            - containerPort: 3006
            - containerPort: 3007
          volumeMounts:
            - name: data
              mountPath: /omni/data
              subPath: data
            - name: data
              mountPath: /omni/log
              subPath: log/api
            - name: data
              mountPath: /omni/scratch-meta-dump
              subPath: scratch/meta-dump
            - name: crypto-secrets
              mountPath: /omni/secrets/jwt_pubkey.pub
              subPath: auth_root_of_trust_pub
              readOnly: true
            - name: crypto-secrets
              mountPath: /omni/secrets/discovery_token
              subPath: svc_reg_token
              readOnly: true
            - name: crypto-secrets
              mountPath: /omni/secrets/lft_salt
              subPath: lft_salt
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nucleus-data
        - name: crypto-secrets
          secret:
            secretName: crypto-secrets
