infrastructure/gitops/apps/platform/nucleus/service-auth.yaml
---
# Source: omniverse-nucleus/templates/services/auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: nucleus-auth
  namespace: omniverse-nucleus
  labels:
    app: nucleus-auth
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  selector:
    app: nucleus-auth
  ports:
    - name: auth
      port: 3100
      targetPort: 3100
    - name: auth-login
      port: 3180
      targetPort: 3180
    - name: auth-api
      port: 8000
      targetPort: 8000
---
# Source: omniverse-nucleus/templates/services/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nucleus-auth
  namespace: omniverse-nucleus
  labels:
    app: nucleus-auth
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: nucleus-auth
  template:
    metadata:
      labels:
        app: nucleus-auth
    spec:
      serviceAccountName: nucleus
      imagePullSecrets:
        - name: ngc-pull-secret
      containers:
        - name: nucleus-auth
          image: nvcr.io/nvidia/omniverse/nucleus-auth:1.5.8
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 3100
            - containerPort: 3180
            - containerPort: 8000
          readinessProbe:
            tcpSocket:
              port: 3100
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 3100
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: data
              mountPath: /omni/data
              subPath: local-accounts-db
            - name: crypto-secrets
              mountPath: /omni/secrets/SERVICE_PRIVATE_KEY
              subPath: auth_root_of_trust_pri
              readOnly: true
            - name: crypto-secrets
              mountPath: /omni/secrets/SERVICE_PUBLIC_KEY
              subPath: auth_root_of_trust_pub
              readOnly: true
            - name: crypto-secrets
              mountPath: /omni/secrets/SERVICE_PRIVATE_KEY_LONG_TERM_TOKENS
              subPath: auth_root_of_trust_lt_pri
              readOnly: true
            - name: crypto-secrets
              mountPath: /omni/secrets/SERVICE_PUBLIC_KEY_LONG_TERM_TOKENS
              subPath: auth_root_of_trust_lt_pub
              readOnly: true
            - name: crypto-secrets
              mountPath: /omni/secrets/SERVICE_SALT
              subPath: pwd_salt
              readOnly: true
            - name: crypto-secrets
              mountPath: /omni/secrets/SERVICE_DISCOVERY_TOKEN
              subPath: svc_reg_token
              readOnly: true
            - name: saml-meta
              mountPath: /omni/secrets/SAML_SSO_META
              subPath: federation.meta.blank.xml
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nucleus-data
        - name: crypto-secrets
          secret:
            secretName: crypto-secrets
        - name: saml-meta
          configMap:
            name: nucleus-saml
