infrastructure/gitops/apps/platform/nucleus/service-lft-lb.yaml
---
# Source: omniverse-nucleus/templates/services/lft-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nucleus-lft-lb
  namespace: omniverse-nucleus
  labels:
    app: nucleus-lft-lb
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  selector:
    app: nucleus-lft-lb
  ports:
    - name: lft
      port: 3030
      targetPort: 3030
---
# Source: omniverse-nucleus/templates/services/lft-lb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nucleus-lft-lb
  namespace: omniverse-nucleus
  labels:
    app: nucleus-lft-lb
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: nucleus-lft-lb
  template:
    metadata:
      labels:
        app: nucleus-lft-lb
    spec:
      serviceAccountName: nucleus
      imagePullSecrets:
        - name: ngc-pull-secret
      containers:
        - name: nucleus-lft-lb
          image: nvcr.io/nvidia/omniverse/nucleus-lft-lb:1.14.53
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 3030
          readinessProbe:
            tcpSocket:
              port: 3030
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 3030
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
