infrastructure/gitops/apps/platform/nucleus/service-lft.yaml
---
# Source: omniverse-nucleus/templates/services/lft.yaml
apiVersion: v1
kind: Service
metadata:
  name: nucleus-lft
  namespace: omniverse-nucleus
  labels:
    app: nucleus-lft
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  selector:
    app: nucleus-lft
  ports:
    - name: lft
      port: 3030
      targetPort: 3030
---
# Source: omniverse-nucleus/templates/services/lft.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nucleus-lft
  namespace: omniverse-nucleus
  labels:
    app: nucleus-lft
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nucleus-lft
  template:
    metadata:
      labels:
        app: nucleus-lft
    spec:
      serviceAccountName: nucleus
      imagePullSecrets:
        - name: ngc-pull-secret
      containers:
        - name: nucleus-lft
          image: nvcr.io/nvidia/omniverse/nucleus-lft:1.14.53
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: 250m
              memory: 512Mi
          ports:
            - containerPort: 3030
          readinessProbe:
            tcpSocket:
              port: 3030
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 3030
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: data
              mountPath: /omni/log
              subPath: log/lft
            - name: data
              mountPath: /omni/data
              subPath: data
            - name: crypto-secrets
              mountPath: /omni/secrets/jwt_pubkey.pub
              subPath: auth_root_of_trust_pub
              readOnly: true
            - name: crypto-secrets
              mountPath: /omni/secrets/lft_salt
              subPath: lft_salt
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nucleus-data
        - name: crypto-secrets
          secret:
            secretName: crypto-secrets
