infrastructure/gitops/apps/platform/nucleus/service-monpx.yaml
---
# Source: omniverse-nucleus/templates/services/monpx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nucleus-monpx
  namespace: omniverse-nucleus
  labels:
    app: nucleus-monpx
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  selector:
    app: nucleus-monpx
  ports:
    - name: metrics
      port: 3010
      targetPort: 8080
---
# Source: omniverse-nucleus/templates/services/monpx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nucleus-monpx
  namespace: omniverse-nucleus
  labels:
    app: nucleus-monpx
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nucleus-monpx
  template:
    metadata:
      labels:
        app: nucleus-monpx
    spec:
      serviceAccountName: nucleus
      imagePullSecrets:
        - name: ngc-pull-secret
      containers:
        - name: nucleus-monpx
          image: nvcr.io/nvidia/omniverse/utl-monpx:1.14.53
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /omni/data
              subPath: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nucleus-data
