infrastructure/gitops/apps/platform/nucleus/service-navigator.yaml
---
# Source: omniverse-nucleus/templates/services/navigator.yaml
apiVersion: v1
kind: Service
metadata:
  name: nucleus-navigator
  namespace: omniverse-nucleus
  labels:
    app: nucleus-navigator
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  selector:
    app: nucleus-navigator
  ports:
    - name: web
      port: 8080
      targetPort: 80
---
# Source: omniverse-nucleus/templates/services/navigator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nucleus-navigator
  namespace: omniverse-nucleus
  labels:
    app: nucleus-navigator
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: nucleus-navigator
  template:
    metadata:
      labels:
        app: nucleus-navigator
    spec:
      serviceAccountName: nucleus
      imagePullSecrets:
        - name: ngc-pull-secret
      containers:
        - name: nucleus-navigator
          image: nvcr.io/nvidia/omniverse/nucleus-navigator:3.3.6
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
