infrastructure/gitops/apps/platform/nucleus/service-search.yaml
---
# Source: omniverse-nucleus/templates/services/search.yaml
apiVersion: v1
kind: Service
metadata:
  name: nucleus-search
  namespace: omniverse-nucleus
  labels:
    app: nucleus-search
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  selector:
    app: nucleus-search
  ports:
    - name: search
      port: 3400
      targetPort: 3400
---
# Source: omniverse-nucleus/templates/services/search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nucleus-search
  namespace: omniverse-nucleus
  labels:
    app: nucleus-search
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nucleus-search
  template:
    metadata:
      labels:
        app: nucleus-search
    spec:
      serviceAccountName: nucleus
      imagePullSecrets:
        - name: ngc-pull-secret
      containers:
        - name: nucleus-search
          image: nvcr.io/nvidia/omniverse/nucleus-search:3.2.12
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 3400
          readinessProbe:
            tcpSocket:
              port: 3400
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 3400
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: crypto-secrets
              mountPath: /omni/secrets/SERVICE_DISCOVERY_TOKEN
              subPath: svc_reg_token
              readOnly: true
            - name: crypto-secrets
              mountPath: /omni/secrets/SERVICE_AUTH_PUBLIC_KEY
              subPath: auth_root_of_trust_pub
              readOnly: true
      volumes:
        - name: crypto-secrets
          secret:
            secretName: crypto-secrets
